# HackOn_CodeByte

./: .gitignore  package-lock.json
agent/meds_ai/: README.md  pyproject.toml  report.md
agent/meds_ai/src/meds_ai/: crew.py  main.py
agent/meds_ai/src/meds_ai/config/: agents.yaml  tasks.yaml
components/: FooterBanner.jsx  HeroBanner.jsx
crewai/medsai/: README.md  pyproject.toml  report.md
crewai/medsai/src/medsai/: api.py  crew.py  main.py  output.json
crewai/medsai/src/medsai/config/: agents.yaml  tasks.yaml
pages/: index.js
styles/: globals.css
