[project]
name = "meds_ai"
version = "0.1.0"
description = "meds-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
meds_ai = "meds_ai.main:run"
run_crew = "meds_ai.main:run"
train = "meds_ai.main:train"
replay = "meds_ai.main:replay"
test = "meds_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
