[project]
name = "medsai"
version = "0.1.0"
description = "MedsAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
medsai = "medsai.main:run"
run_crew = "medsai.main:run"
train = "medsai.main:train"
replay = "medsai.main:replay"
test = "medsai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
